--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,51 +1,55 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">Literature</a>
+    <a class="navbar-brand" routerLink='/'>Home</a>
 
-    <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Items</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Orders</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Deliveries</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Congregations</a>
-      </li>
-    </ul>
-
-    <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-      <a class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
-      <div class="dropdown-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item">Edit Profile</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" (click)="logout()">Logout</a>
+    <div class="collapse navbar-collapse" id="navbar01">
+      <ul class="navbar-nav me-auto">
+        <ng-container *ngIf="accountService.currentUser$ | async">
+          <li class="nav-item">
+            <a class="nav-link" routerLink='/literature' routerLinkActive='active'>Literature</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink='/request' routerLinkActive='active'>Requests</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink='/delivery' routerLinkActive='active'>Deliveries</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink='/congregation' routerLinkActive='active'>Congregations</a>
+          </li>
+        </ng-container>
+      </ul>
+  
+      <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+        <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | titlecase}}</a>
+        <div class="dropdown-menu mt-3" *dropdownMenu>
+          <a class="dropdown-item">Edit Profile</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" (click)="logout()">Logout</a>
+        </div>
       </div>
+  
+      <form *ngIf="(accountService.currentUser$ | async) === null"
+        #loginForm="ngForm"
+        class="form-inline mt-2 mt-md-0"
+        (ngSubmit)="login()"
+        autocomplete="off">
+        <input 
+          name="username"
+          [(ngModel)]="model.username"
+          class="form-control mr-sm-2" 
+          type="Text" 
+          placeholder="Username" />
+        <input
+          name="password"
+          [(ngModel)]="model.password"
+          class="form-control mr-sm-2"
+          type="Password"
+          placeholder="Password"/>
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+          Login
+        </button>
+      </form>
     </div>
-
-    <form *ngIf="(accountService.currentUser$ | async) === null"
-      #loginForm="ngForm"
-      class="form-inline mt-2 mt-md-0"
-      (ngSubmit)="login()"
-      autocomplete="off">
-      <input 
-        name="username"
-        [(ngModel)]="model.username"
-        class="form-control mr-sm-2" 
-        type="Text" 
-        placeholder="Username" />
-      <input
-        name="password"
-        [(ngModel)]="model.password"
-        class="form-control mr-sm-2"
-        type="Password"
-        placeholder="Password"/>
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-        Login
-      </button>
-    </form>
   </div>
 </nav>
