--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -15,13 +15,16 @@
       <ul class="navbar-nav me-auto">
         <ng-container *ngIf="accountService.currentUser$ | async">
           <li class="nav-item">
-            <a class="nav-link" routerLink='/request' routerLinkActive='active'>Requests</a>
+            <a class="nav-link" routerLink='/requests' routerLinkActive='active'>Requests</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink='/delivery' routerLinkActive='active'>Deliveries</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink='/congregation' routerLinkActive='active'>Congregations</a>
+            <a class="nav-link" routerLink='/congregations' routerLinkActive='active'>Congregations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink='/users' routerLinkActive='active'>Users</a>
           </li>
         </ng-container>
       </ul>
