Create edit-user form.

--- a/client/src/app/users/user-info/user-info.component.css
+++ b/client/src/app/users/user-info/user-info.component.css
@@ -4,3 +4,12 @@
   transition-timing-function: ease-out;
   cursor: pointer;
 }
+
+.btn {
+  background-color: transparent;
+}
+
+.card-title {
+  color: #8e8c84 !important;
+  font-weight: bold;
+}
