--- a/client/src/app/users/user-info/user-info.component.html
+++ b/client/src/app/users/user-info/user-info.component.html
@@ -1,10 +1,12 @@
 <div class="card mb-4">
+  <button routerLink="/users/{{user.username}}" class="btn btn-primary">
   <div class="card-body p-1">
+    
     <h6 class="card-title text-center mb-1">
-      <i class="fa fa-user mr-2"></i>
-      {{user.username}}
+        {{user.username}}
     </h6>
-    <p class="card-text text-muted text-center">{{user.firstName}} {{user.surname}}</p>
-    <p *ngFor="let cong of user.congregationRoles" class="card-text text-muted text-center">{{cong.congregation}} - {{cong.role}}</p>
-  </div>
+      <p class="card-text text-muted text-center">{{user.firstName}} {{user.surname}}</p>
+      <p *ngFor="let cong of user.congregationRoles" class="card-text text-muted text-center">{{cong.congregation}} - {{cong.role}}</p>
+    </div>
+  </button>
 </div>
