--- a/client/src/app/users/user-list/user-list.component.html
+++ b/client/src/app/users/user-list/user-list.component.html
@@ -1,3 +1,19 @@
+<div class="container mt-3">
+  <form #filerForm="ngForm" class="form-inline mb-3" (ngSubmit)="loadUsers()" autocomplete="off">
+    <div class="form-group">
+      <label>Congregation:</label>
+      <select [(ngModel)]="userParams.congregation" name="congregation" style="width: 130px" class="form-control ml-1">
+        <option [value]="0">All</option>
+        <option *ngFor="let cong of congregations" [value]="cong.id">
+          {{cong.name}}
+        </option>
+      </select>
+    </div>
+    <button class="btn btn-primary ml-1" type="submit">Search</button>
+    <button (click)=resetFilters() class="btn btn-info ml-1" type="submit">Clear</button>
+  </form>
+</div>
+
 <div class="row">
   <div *ngFor="let user of users" class="col-2">
     <app-user-info [user]="user"></app-user-info>
