--- a/client/src/app/users/user-list/user-list.component.html
+++ b/client/src/app/users/user-list/user-list.component.html
@@ -1,22 +1,52 @@
 <div class="container mt-3">
   <form #filerForm="ngForm" class="form-inline mb-3" (ngSubmit)="loadUsers()" autocomplete="off">
+
     <div class="form-group">
       <label>Congregation:</label>
-      <select [(ngModel)]="userParams.congregation" name="congregation" style="width: 130px" class="form-control ml-1">
+      <select 
+        [(ngModel)]="userParams.congregation" 
+        name="congregation" 
+        style="float: right" 
+        class="form-control ml-1"
+        (click)="loadUsers()">
         <option [value]="0">All</option>
-        <option *ngFor="let cong of congregations" [value]="cong.id">
+        <option *ngFor="let cong of congregations" [value]="cong.id" >
           {{cong.name}}
         </option>
       </select>
     </div>
-    <button class="btn btn-primary ml-1" type="submit">Search</button>
-    <button (click)=resetFilters() class="btn btn-info ml-1" type="submit">Clear</button>
+
+    <div class="col">
+      
+      <div class="btn-group float-right">
+        <label class="label mr-2">Sort By:</label>
+        <button type="button"
+          class="btn btn-primary" 
+          name="orderBy" 
+          [(ngModel)]="userParams.orderBy"
+          (click)="loadUsers()"
+          btnRadio="firstname">Firstname</button>
+        <button type="button"
+          class="btn btn-primary" 
+          name="orderBy" 
+          [(ngModel)]="userParams.orderBy"
+          (click)="loadUsers()"
+          btnRadio="surname">Surname</button>
+        <button type="button"
+          class="btn btn-primary" 
+          name="orderBy" 
+          [(ngModel)]="userParams.orderBy"
+          (click)="loadUsers()"
+          btnRadio="lastActive">Last Active</button>
+        
+      </div>
+    </div>
   </form>
 </div>
 
 <div class="row">
   <div *ngFor="let user of users" class="col-2">
-    <app-user-info [user]="user"></app-user-info>
+    <app-user-card [user]="user"></app-user-card>
   </div>
 </div>
 
