--- a/client/src/app/congregations/congregation-card/congregation-card.component.html
+++ b/client/src/app/congregations/congregation-card/congregation-card.component.html
@@ -3,9 +3,10 @@
   <div class="card-body p-1">
     
     <h6 class="card-title text-center mb-1">
-        {{congregation.name}}
+        {{congregation.name | titlecase}}
     </h6>
-      <p class="card-text text-muted text-center">{{congregation.name | titlecase}} {{congregation.code}}</p>
+      <p class="card-text text-muted text-center"><i class="fa fa-user mr-2"></i> 
+        Publishers: {{congregation.publishers}}</p>
     </div>
   </button>
 </div>
