--- a/client/src/app/congregations/congregation-list/congregation-list.component.html
+++ b/client/src/app/congregations/congregation-list/congregation-list.component.html
@@ -8,6 +8,9 @@
         style="float: right" 
         class="form-control ml-1"
         (click)="getCongregations()"/>
+      <button class="btn-group float-left ml-2 btn-success" routerLink="/congregations/add">
+        Create New
+      </button>
     </div>
 
     <div class="col">
