--- a/client/src/app/congregations/congregation-add/congregation-add.component.html
+++ b/client/src/app/congregations/congregation-add/congregation-add.component.html
@@ -11,10 +11,18 @@
     [formControl]="addForm.controls['code']" 
     [label]="'Code'"></app-text-input>
   
-  
+  <div class="row" *ngIf="validationErrors.length > 0">
+    <ul class="text-danger">
+      <li *ngFor="let error of validationErrors">
+        {{error}}
+      </li>
+    </ul>
+  </div>
+
+
   <div class="form-group text-center">
     <button class="btn btn-success mr-2" type="submit">Register</button>
-    <button class="btn btn-default mr-2" (click)="cancel()" type="button">Cancel</button>
+    <button class="btn btn-default mr-2" routerLink="/congregations" type="button">Cancel</button>
   </div>
 </form>
 
