--- a/client/src/app/_forms/text-input/text-input.component.html
+++ b/client/src/app/_forms/text-input/text-input.component.html
@@ -4,14 +4,14 @@
     type={{type}}
     class="form-control"
     [formControl]="ngControl.control"
-    placeholder="{{label}}">
+    placeholder="{{placeholder?? label}}">
   <div *ngIf="ngControl.control.errors?.required" class="invalid-feedback">Please enter a {{label}}.</div>
   <div *ngIf="ngControl.control.errors?.minlength" class="invalid-feedback">
     {{label}} must be at least {{ngControl.control.errors.minlength['requiredLength']}}.</div>
   <div *ngIf="ngControl.control.errors?.maxlength" class="invalid-feedback">
     {{label}} cannot be longer than {{ngControl.control.errors.maxlength['requiredLength']}} characters.</div>
   <div *ngIf="ngControl.control.errors?.isMatching" class="invalid-feedback">
-    Passwords do not match.</div>
+    '{{label}}' does not match.</div>
     <div *ngIf="ngControl.control.errors?.uniqueName" class="invalid-feedback">
       This name is already in use.</div>
 </div>
