--- a/client/src/app/congregations/congregation-card/congregation-card.component.html
+++ b/client/src/app/congregations/congregation-card/congregation-card.component.html
@@ -5,6 +5,7 @@
     <h6 class="card-title text-center mb-1">
         {{congregation.name | titlecase}}
     </h6>
+      <p class="card-text text-muted text-center"><i class="fa fa-hashtag mr-2"></i>{{congregation.code}}</p>
       <p class="card-text text-muted text-center"><i class="fa fa-user mr-2"></i> 
         Publishers: {{congregation.publishers}}</p>
     </div>
