--- a/client/src/app/users/user-list/user-list.component.html
+++ b/client/src/app/users/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-3">
-  <form #filerForm="ngForm" class="form-inline mb-3" (ngSubmit)="loadUsers()" autocomplete="off">
+  <form #filterForm="ngForm" class="form-inline mb-3" (ngSubmit)="loadUsers()" autocomplete="off">
 
     <div class="form-group">
       <label>Congregation:</label>
