--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
   <div class="container">
-    <a class="navbar-brand" routerLink='/'>Home</a>
+    <a class="navbar-brand" routerLink='/'><i class="fa fa-book mr-2"></i>Home</a>
 
     <div class="collapse navbar-collapse" id="navbar01">
 
@@ -25,6 +25,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink='/users' routerLinkActive='active'>Users</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink='/errors' routerLinkActive='active'>Errors</a>
           </li>
         </ng-container>
       </ul>
