--- a/client/src/app/congregations/congregation-item/congregation-item.component.html
+++ b/client/src/app/congregations/congregation-item/congregation-item.component.html
@@ -1,1 +1,39 @@
-<p>congregation-item works!</p>
+<div class="container mt-3" *ngIf="congregation">
+  <div class="row">
+    <h2 class="text-center text-primary">View Congregation</h2>
+    <hr>
+  </div>
+
+  <form #editForm="ngForm">
+    <div>
+      <strong class="mt-2">Name:</strong>
+      <input type="text" name="name" class="form-control" [(ngModel)]="congregation.name">
+    </div>
+    <div>
+      <strong class="mt-2">Code:</strong>
+      <input type="text" name="code" class="form-control" [(ngModel)]="congregation.code">
+    </div>
+  </form>
+
+  <div class="row mt-4">
+    <div *ngFor="let user of users" class="col-2">
+      <app-user-card [user]="user"></app-user-card>
+    </div>
+  </div>
+
+
+  <div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination
+      [boundaryLinks]="true"
+      [totalItems]="pagination.totalItems"
+      [itemsPerPage]="pagination.itemsPerPage"
+      [(ngModel)]="pagination.currentPage"
+      (pageChanged)="pageChanged($event)"
+      previousText="&lsaquo;"
+      nextText="&rsaquo;"
+      firstText="&laquo;"
+      lastText="&raquo;">
+    </pagination>
+  </div>
+</div>  
+
